fixed flickering bug, removed borders, adjusted margins

--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,8 @@ ul {
 
 .navbar {
     background-color: var(--background-primary);
+    position: fixed;
     width: 100%;
-    position: sticky;
     top: 0;
     z-index: 1;
 }
@@ -84,7 +84,11 @@ ul {
     height: 90px;
 }
 
-.navbar ul li :hover {
+.navbar li {
+    margin: 0 0 0 10px;
+}
+
+.navbar li :hover {
     border-bottom: 2px solid var(--text-primary);
 }
 
@@ -100,6 +104,10 @@ ul {
     background: var(--background-secondary);
 }
 
+.welcome  h1 {
+    padding-top: 50px;
+}
+
 .welcome .container {
     max-width: 1000px;
 }
@@ -111,7 +119,6 @@ ul {
 .welcome .grid {
     grid-template-columns: 60% 40%;
     padding: 40px;
-    margin: 70px 0;
 }
 
 
@@ -123,7 +130,7 @@ ul {
 
 
 .headshot img {
-    padding: 20px;
+    margin: 20px;
     max-width: 300px;
 }
 
