--- a/utilities.css
+++ b/utilities.css
@@ -61,7 +61,7 @@
     font-size: 2rem;
 }
 .fontSize4 {
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 .border1 {
